tests/lean/doSeqRightIssue.lean.expected.out
doSeqRightIssue.lean:5:24: error: unknown universe level v
doSeqRightIssue.lean:5:24: error: unknown universe level v
doSeqRightIssue.lean:7:8: error: (kernel) declaration has metavariables ex
